--- a/src/style.css
+++ b/src/style.css
@@ -20,21 +20,38 @@ body {
 
 .header {
 	background-color: var(--bg-soft);
-	padding: 0.5rem 0;
+	padding: 0.5rem;
+	margin-bottom: 0.5rem;
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	gap: 40vw;
+	justify-content: space-between;
 }
 
+.bodycontainer {
+	width: 100%;	
+	background-color: grey;
+}
+
+.workspace {
+	display: flex;
+}
+
+.toolbar, .codearea, .previewarea {
+	height: 94vh;
+	background-color: red;
+}
+
+.toolbar {
+	max-width: 5vw; 
+}
+
+.codearea, .previewarea {
+	max-width: 45vw;
+}
+
+
 @media screen and (max-width: 1400px) {
-	.header {
-		gap: 35vw;
-	}
 }
 
 @media screen and (max-width: 800px) {
-	.header {
-		gap: 25vw;
-	}
 }
