--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,11 @@ body {
 	justify-content: space-between;
 }
 
+.navtool {
+	display: flex;
+	padding: 0.5rem 0;
+}
+
 .git {
 	color: var(--text);
 }
