layout: initial workspace layout

--- a/src/style.css
+++ b/src/style.css
@@ -17,13 +17,13 @@
 body {
 	background-color: var(--bg); 
 	color : var(--text);
-	font-size: 14px;
+	font-size: 16px;
 }
 
 .header {
 	background-color: var(--bg-soft);
 	border: 0;
-	padding: 0.5rem;
+	padding:  0.5rem 1rem;
 	margin-bottom: 0.5rem;
 	display: flex;
 	align-items: center;
@@ -35,7 +35,7 @@ body {
 	padding: 0.5rem 0;
 }
 
-.git, .title {
+.git, .title, .darkmode {
 	background-color: var(--bg-soft);
 	border: 0;
 	border-style: none;
@@ -44,39 +44,57 @@ body {
 }
 
 .workspace {
-	margin: 0 0.5rem;
 	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+	flex-direction: row;
 	gap: 0.5rem;
 	height: 92vh;
 }
 
-.codearea, .previewarea {
-	width: 50vw;
-	display: flex;
+.code-container, .preview-container {
+	min-width: 48vw;
+	background-color: var(--grey);
 	padding: 1.5rem;
 	border-radius: 1rem;
 	min-height: 100%;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.codearea {
-	background-color: var(--grey);
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
 }
 
 .toolbar {
-	width: 5vw;
-	min-height: 100%;
-	background-color: var(--text);
+	min-height: 20%;
+	background-color: var(--bg);
 	display: flex;
-	padding: 0.5rem;
-	border-radius: 1rem;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 1rem 0.5rem;
+	border-radius: 0 1rem 1rem 0;
 	box-shadow: 0 8px 12px 0 rgba(0,0,0,0.8);
 }
 
-.previewarea {
-	background-color: var(--white);
+.topicons {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+.topicons>*, .bottomicons>* {
+	border: 0;
+	border-style: none;
+	background-color: var(--bg);
+	color: var(--text);
+}
+
+.codebox {
+	min-width: 100%;
+	min-height: 100%;
+	background-color: var(--bg-soft);
+	border: 0;
+	border-style: none;
+	border-radius: 10px;
+	color: var(--text);
+}
+
+.previewbox {
+	min-width: 100%;
+	min-height: 100%;
 }
 
 
